--- a/src/main/webapp/i18n/fr/movie.json
+++ b/src/main/webapp/i18n/fr/movie.json
@@ -20,6 +20,7 @@
             "year": "Year",
             "plot": "Plot",
             "imageUrl": "Image Url",
+            "image": "Image",
             "elo": "Elo",
             "moviePerson": "Movie Person",
             "category": "Category"
