FEAT - Move home to about page and create Fury page

--- a/src/main/webapp/i18n/en/about.json
+++ b/src/main/webapp/i18n/en/about.json
@@ -1,5 +1,5 @@
 {
-    "home": {
+    "about": {
         "title": "Welcome, Java Hipster!",
         "subtitle": "This is your homepage",
         "logged": {
