--- a/src/main/webapp/i18n/fr/about.json
+++ b/src/main/webapp/i18n/fr/about.json
@@ -1,5 +1,5 @@
 {
-    "home": {
+    "about": {
         "title": "Bienvenue, Java Hipster !",
         "subtitle": "Ceci est votre page d'accueil",
         "logged": {
