FEAT - Ask for authentication before fury

--- a/src/main/webapp/i18n/en/fury.json
+++ b/src/main/webapp/i18n/en/fury.json
@@ -1,6 +1,6 @@
 {
     "fury": {
-        "title": "Rumble Time!",
+        "title": "Fury Time!",
         "subtitle": "Click on the one you like the most"
     }
 }
