FEAT - Allow users to vote. Add createdBy in admin interface

--- a/src/main/webapp/i18n/en/vote.json
+++ b/src/main/webapp/i18n/en/vote.json
@@ -19,7 +19,9 @@
             "winnerEloDiff": "Winner Elo Diff",
             "loserEloDiff": "Loser Elo Diff",
             "winner": "Winner",
-            "loser": "Loser"
+            "loser": "Loser",
+            "createdBy": "Created By",
+            "createdDate": "Created Date"
         }
     }
 }
