BUG - Fix cache control on random endpoint. Fix linked category import

--- a/src/main/webapp/i18n/fr/movie.json
+++ b/src/main/webapp/i18n/fr/movie.json
@@ -23,7 +23,7 @@
             "image": "Image",
             "elo": "Elo",
             "moviePerson": "Movie Person",
-            "category": "Category"
+            "category": "Catégorie"
         }
     }
 }
