TECH - Translation and titles

--- a/src/main/webapp/i18n/en/about.json
+++ b/src/main/webapp/i18n/en/about.json
@@ -1,7 +1,7 @@
 {
     "about": {
-        "title": "Welcome, Java Hipster!",
-        "subtitle": "This is your homepage",
+        "title": "Welcome to Media Fury",
+        "subtitle": "This is a pet project to test angular 5+ and spring through jhipster generators. The theme of this project is based on the awesome short film named Kung Fury: ",
         "logged": {
             "message": "You are logged in as user \"{{username}}\"."
         },
