--- a/src/main/webapp/i18n/en/person.json
+++ b/src/main/webapp/i18n/en/person.json
@@ -17,7 +17,7 @@
                 "title": "Person"
             },
             "name": "Name",
-            "moviePerson": "Movie Person"
+            "moviePerson": "Contributor"
         }
     }
 }
