--- a/src/main/webapp/i18n/en/personRole.json
+++ b/src/main/webapp/i18n/en/personRole.json
@@ -2,9 +2,9 @@
     "mediafuryApp": {
         "PersonRole" : {
             "null": "",
-            "WRITER": "WRITER",
-            "ACTOR": "ACTOR",
-            "DIRECTOR": "DIRECTOR"
+            "WRITER": "Writer",
+            "ACTOR": "Actor",
+            "DIRECTOR": "Director"
         }
     }
 }
